--- a/file-upload-minio/pom.xml
+++ b/file-upload-minio/pom.xml
@@ -60,7 +60,10 @@
             <artifactId>commons-codec</artifactId>
             <version>1.15</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
 
     </dependencies>
