--- a/file-upload-minio/src/main/resources/application.yml
+++ b/file-upload-minio/src/main/resources/application.yml
@@ -1,2 +1,17 @@
 server:
   port: 8080
+
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB  # 设置最大上传文件的大小为10MB
+      max-request-size: 10MB # 设置单个文件最大上传大小为10MB
+
+## minio配置
+minio:
+  endpoint: http://localhost:9000
+  accessKey: minioadmin
+  secretKey: minioadmin
+  bucket:
+    files: mediafiles
+    videofiles: videofiles
