--- a/json-demo/pom.xml
+++ b/json-demo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hw</groupId>
-    <artifactId>jackson-demo</artifactId>
+    <artifactId>json-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
