--- a/datasource-demo/pom.xml
+++ b/datasource-demo/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>gbasedbtjdbc</artifactId>
             <version>3.5.0_2_36800b</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
     <build>
