--- a/forge-data/pom.xml
+++ b/forge-data/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.71</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
