--- a/forge-data/src/main/resources/application.yml
+++ b/forge-data/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mysql://10.110.124.127:30005/conservatory_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://10.0.0.0:3306/conservatory_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
-    password: Idb@1024
+    password:
 #mybatis-plus配置
 mybatis-plus:
   configuration:
