--- a/springboot-mybatis-demo/src/main/resources/application.yml
+++ b/springboot-mybatis-demo/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     username: root
-    password:
-    url: jdbc:mysql://10.110.55.25:3308/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    password: FHI%*#5843
+    url: jdbc:mysql://10.110.145.36:30005/idb_dm_catalog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
 
 mybatis:
   mapper-locations: classpath:mybatis/*.xml
