--- a/forge-data/src/main/resources/application.yml
+++ b/forge-data/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mysql://10.0.0.0:3306/conservatory_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://10.110.55.15:30005/kg_performace_hw?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
     password:
 #mybatis-plus配置
