--- a/springboot-mybatis-demo/src/main/resources/application.yml
+++ b/springboot-mybatis-demo/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 80
 
 #配置spring的连接
 spring:
   datasource:
     username: root
-    password: FHI%*#5843
-    url: jdbc:mysql://10.110.145.36:30005/idb_dm_catalog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
+    password: root
+    url: jdbc:mysql://localhost:3306/hw_demo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=GMT%2B0
 
 mybatis:
   mapper-locations: classpath:mybatis/*.xml
