--- a/springboot-mybatisplus-demo/src/main/resources/application.yml
+++ b/springboot-mybatisplus-demo/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mysql://10.110.124.127:30005/conservatory_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://172.22.100.65:30005/order_service?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
-    password: Idb@1024
+    password: Icd@1024
 #mybatis-plus配置
 mybatis-plus:
   configuration:
