--- a/springboot-datasource-demo/src/main/resources/application.yml
+++ b/springboot-datasource-demo/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
+#      driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/hw_demo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=GMT%2B8
       username: root
       password: root
